# brazo_robotico

./: arips_arm.urdf  arips_arm.xacro  arips_arm_node.cpp  arips_hardware.cpp  brazo.launch.py  comando_J_T_C.cpp
Controladores/: CMakeLists.txt  package.xml  ros2_control_hardware.xml
Controladores/include/mis_controladores_hardware/: Brazo_posicion (copia).hpp  Brazo_posicion.hpp  actuator.hpp  arips_hardware.hpp  diffbot_system.hpp  external_force_torque_sensor.hpp  system_multi_interface.hpp  system_position_only.hpp  system_with_sensor.hpp
Controladores/src/: Brazo_posicion (copia).cpp  Brazo_posicion.cpp  actuator.cpp  arips_hardware.cpp  diffbot_system.cpp  external_force_torque_sensor.cpp  system_multi_interface.cpp  system_position_only.cpp  system_with_sensor.cpp
arips_ros/arips_arm_description/: CMakeLists.txt  package.xml
arips_ros/arips_arm_description/config/: brazo_controllers.yaml
arips_ros/arips_arm_description/launch/: brazo.launch.py
arips_ros/arips_arm_description/moveit/: brazo.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_ros_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml
arips_ros/arips_arm_description/rviz/: rrbot.rviz  rrbot_no_moveit.rviz  rviz.rviz
arips_ros/arips_arm_description/urdf/: arips_arm.urdf  arips_arm.xacro  definir_hardware_ros2_control.xacro
arips_ros/arips_arm_node/: CMakeLists.txt  package.xml
arips_ros/arips_arm_node/launch/: brazo_moveit.launch.py
arips_ros/arips_arm_node/src/: SCSProtocol.cpp  SCSProtocol.hpp  SCServo.cpp  SCServo.hpp  arips_arm_node-30-01-24.cpp  arips_arm_node.cpp  arips_arm_node_INVENTADO.cpp  comando_J_T_C.cpp  control_comando.cpp  miSCServo.cpp  move_group_EXE.cpp
arips_ros/maixSense/: CMakeLists.txt
