<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arips_arm_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="miguel@todo.todo">miguel</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>xacro</exec_depend>
    <!-- default version to use in official ROS2 packages is Ignition Edifice for ROS2 Galactic -->
  <depend condition="$IGNITION_VERSION == ''">ignition-gazebo5</depend>
  <depend condition="$IGNITION_VERSION == cidadel">ignition-gazebo3</depend>
  <depend condition="$IGNITION_VERSION == edifice">ignition-gazebo5</depend>
  <depend condition="$IGNITION_VERSION == fortress">ignition-gazebo6</depend>
  <depend>ignition-plugin</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
